# yeelight-lan-control

./: README.md  README.zh.md  Yeelight.md  Yeelight.zh.md  package-lock.json  package.json  tsconfig.json
.github/workflows/: golang-release.yml  nodejs-release.yml  rust-release.yml
golang/: .gitignore  README.md  README.zh.md  go.mod  main.go  main_test.go
golang/yeelight/: cache.go  cache_test.go  cli_support.go  cli_support_test.go  client.go  client_test.go  discovery.go  flow_test.go  protocol.go  protocol_test.go  types.go
nodejs/: README.md  package.json
nodejs/src/: cli-support.ts  cli.ts
nodejs/test/: cli-support.test.ts
rust/: Cargo.toml  README.md  README.zh.md
rust/src/: cache.rs  cli_support.rs  client.rs  discovery.rs  error.rs  lib.rs  main.rs  protocol.rs  types.rs
rust/tests/: cli_support.rs  flow.rs  protocol.rs
src/: cache.ts  cli.js
src/yeelight/: cache.js  client.js  discovery.js  protocol.js
test/: protocol.test.js  protocol.test.ts
