[package]
name = "yeelight-cli"
version = "0.1.0"
edition = "2024"
description = "Rust CLI and library for controlling Yeelight bulbs over LAN"
license = "MIT"

[lib]
name = "yeelight_cli"
path = "src/lib.rs"

[[bin]]
name = "yeelight"
path = "src/main.rs"

[dependencies]
base64 = "0.22"
dirs = "6"
if-addrs = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
socket2 = { version = "0.5", features = ["all"] }
thiserror = "2"
